k8s/flux-playground/traefik-kind/home/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - kind-worker2
      containers:
        - name: nginx
          volumeMounts:
            - name: home
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: home
          configMap:
            name: home
            items:
              - key: index.html
                path: index.html
